--- a/sass/layouts/_box.scss
+++ b/sass/layouts/_box.scss
@@ -5,6 +5,5 @@
     height: auto;
     margin-bottom: 30px;
     border-radius: 15px;
-    box-shadow: 5px 5px 10px rgb(231, 229, 229);
-    
+    box-shadow: 5px 5px 10px $color-shadow;
 }
