--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -6,17 +6,6 @@
     background-color: rgb(58, 58, 58);
     color: white;
 
-    &-logo {
-        width: 35%;
-        filter: invert(100%);
-        margin-bottom: 12px;
-    }
-
-    &-logo img {
-        width: 100%;
-        height: 100%;
-    }
-
     & p {
         font-size: 18px;
         padding-bottom: 0;
@@ -30,7 +19,18 @@
         color: white;
     }
 
-    &-info {
+    &__logo {
+        width: 35%;
+        filter: invert(100%);
+        margin-bottom: 12px;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__info {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
