responsive page home

--- a/sass/base/_titles.scss
+++ b/sass/base/_titles.scss
@@ -1,15 +1,20 @@
 /* Paramètres généraux du site web Ohmyfood */
 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-}
 
 h1 {
     font-size: 21px;
     font-weight: bolder;
     font-family: 'Roboto', sans-serif;
+
+    @include responsive-tablet {
+        @include flex-center;
+    }
+
+    @include responsive-desktop {
+        justify-content: flex-start;
+        padding-left: 45px;
+        
+    }
 }
 
 h2 {
