--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -101,7 +101,7 @@
 }
 
 
-/* Mise en place de l'animation xde transition des cartes */
+/* Mise en place de l'animation de transition des cartes */
 
 
 @keyframes entrees {
