--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -22,3 +22,7 @@ $color-background: #fcf9f9;
 $color-shadow: rgb(231, 229, 229);
 $size-shadow: 5px 5px 10px;
 
+/* Map responsive design */
+
+$responsive: (mobile: 768px, tablet: 1000px);
+
