--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,37 @@
 @charset "UTF-8";
-/* Variables pour l'animation de l'arrivée des cartes sur les pages restaurants */
-/* Variables pour l'animation loading spinner */
+/* Variables pour l'animation de transition des cartes sur les pages menus */
+/* Variables pour l'animation du loading spinner */
 /* Variables couleurs */
 /* Variable box shadow */
+/* Map responsive design */
 /* Mixin effet des boutons principaux */
+/* Mixin flex-center */
+/* Mixin responsive */
+/* Sélection des polices de charactères */
+/* titles : Shrikhand */
+/* txt : Roboto */
+@font-face {
+  font-family: "Roboto";
+  src: url(https://fonts.gstatic.com/s/roboto/v29/KFOmCnqEu92Fr1Mu72xKOzY.woff2) format("woff2");
+}
 /* Paramètres généraux du site web Ohmyfood */
 h1 {
   font-size: 21px;
   font-weight: bolder;
   font-family: "Roboto", sans-serif;
+}
+@media screen and (min-width: 768px) {
+  h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1000px) {
+  h1 {
+    justify-content: flex-start;
+    padding-left: 45px;
+  }
 }
 
 h2 {
@@ -45,10 +68,64 @@ h5 {
   text-overflow: ellipsis;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto", sans-serif;
+/* Design bouton dégradé */
+button {
+  color: white;
+  font-weight: bolder;
+  border-radius: 30px;
+  background: linear-gradient(#FF79DA, #9356DC);
+  border: transparent;
+  padding: 15px 20px;
+  box-shadow: 5px 5px 10px rgb(231, 229, 229);
+  cursor: pointer;
+}
+button:hover {
+  box-shadow: 5px 5px 10px #9e9595;
+  opacity: 0.8;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+}
+.button__title {
+  width: 48%;
+}
+
+/* Mise en place de l'animation du bouton "j'aime" en forme de coeur */
+@keyframes heart {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.heart {
+  width: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+}
+.heart .far {
+  position: absolute;
+  font-weight: 100;
+}
+.heart .far:hover {
+  opacity: 0;
+}
+.heart .fas {
+  position: absolute;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  background-image: linear-gradient(#9356DC, #FF79DA);
+}
+.heart .fas:hover {
+  opacity: 1;
+  animation: heart 1000ms;
 }
 
 /* Mise en place loading spinner */
@@ -91,8 +168,29 @@ main {
     opacity: 1;
   }
 }
+/* Paramètres généraux du site web Ohmyfood */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+/* Paramètres des box */
+.box {
+  display: grid;
+  height: auto;
+  margin-bottom: 30px;
+  border-radius: 15px;
+  box-shadow: 5px 5px 10px rgb(231, 229, 229);
+}
+@media screen and (min-width: 768px) {
+  .box {
+    margin-right: 0;
+  }
+}
+
 /* Mise en page du header de la page d'accueil */
-.header_accueil {
+.header_home {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -101,6 +199,11 @@ main {
 .header__logo {
   width: 45%;
   padding: 12px;
+}
+@media screen and (min-width: 768px) {
+  .header__logo {
+    width: 60%;
+  }
 }
 
 .header__logo img {
@@ -124,25 +227,91 @@ main {
   color: black;
 }
 
-/* Mise en page de la bannière d'image sur les pages des restaurants */
-.cover-image img {
-  height: 250px;
+.header_responsive {
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 30px 20px;
+  background-color: rgb(58, 58, 58);
+  color: white;
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    align-items: center;
+  }
+}
+.footer p {
+  font-size: 18px;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  padding-top: 0;
+  margin-top: 8px;
+}
+.footer a {
+  text-decoration: none;
+  color: white;
+}
+.footer__logo {
+  width: 35%;
+  filter: invert(100%);
+  margin-bottom: 12px;
+}
+@media screen and (min-width: 768px) {
+  .footer__logo {
+    max-width: 20%;
+    margin-bottom: 20px;
+  }
+}
+.footer__logo img {
   width: 100%;
-  object-fit: cover;
-  z-index: 1;
+  height: 100%;
+}
+@media screen and (min-width: 768px) {
+  .footer__info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+  }
+}
+.footer__info--layout {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+.footer__info--layout span {
+  width: 5%;
+}
+.footer__info--layout p {
+  margin-left: 15px;
 }
 
 /* Mise en page de la barre de localisation */
 .localisation {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
   background-color: rgb(231, 229, 229);
   width: 100%;
   box-shadow: inset 0em 0.1em 2px rgb(184, 184, 184);
   padding-top: 12px;
   padding-bottom: 12px;
+}
+@media screen and (min-width: 768px) {
+  .localisation {
+    padding: 0;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    border-radius: 35px;
+    width: 30%;
+  }
 }
 .localisation__icone {
   padding-left: 30px;
@@ -159,13 +328,12 @@ main {
   color: black;
   font-size: 14px;
 }
-
 /* Mise en page de la courte présentation de l'entreprise */
 .presentation {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   text-align: center;
   background-color: #fcf9f9;
   padding-top: 15px;
@@ -173,45 +341,19 @@ main {
   padding-left: 20px;
   padding-bottom: 50px;
 }
+@media screen and (min-width: 768px) {
+  .presentation {
+    box-shadow: inset 0em 0.1em 2px rgb(184, 184, 184);
+    background-color: rgb(231, 229, 229);
+  }
+}
 .presentation p {
   font-size: 16px;
   margin-top: 0;
   margin-bottom: 25px;
 }
 
-/* Design bouton dégradé */
-button {
-  color: white;
-  font-weight: bolder;
-  border-radius: 30px;
-  background: linear-gradient(#FF79DA, #9356DC);
-  border: transparent;
-  padding: 15px 20px;
-  box-shadow: 5px 5px 10px rgb(231, 229, 229);
-  cursor: pointer;
-}
-button:hover {
-  box-shadow: 5px 5px 10px #9e9595;
-  opacity: 0.8;
-}
-
-.button {
-  display: flex;
-  justify-content: center;
-}
-.button__title {
-  width: 48%;
-}
-
-/* Paramètres des box */
-.box {
-  display: grid;
-  height: auto;
-  margin-bottom: 30px;
-  border-radius: 15px;
-  box-shadow: 5px 5px 10px rgb(231, 229, 229);
-}
-
+/* Mise en page de la partie Fonctionnement */
 .fonctionnement {
   padding: 30px 20px;
 }
@@ -221,6 +363,11 @@ button:hover {
   justify-content: space-around;
   align-items: center;
 }
+@media screen and (min-width: 1000px) {
+  .fonctionnement_orga {
+    flex-direction: row;
+  }
+}
 .fonctionnement__box {
   display: flex;
   justify-content: flex-start;
@@ -229,11 +376,21 @@ button:hover {
   padding: 5px 0px;
   cursor: pointer;
 }
+@media screen and (min-width: 768px) {
+  .fonctionnement__box {
+    width: 55%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .fonctionnement__box {
+    width: 25%;
+  }
+}
 .fonctionnement__box:hover {
   background: #e7d2ff;
 }
 .fonctionnement__box:hover .fonctionnement__icone {
-  color: #9356dc;
+  color: #9356DC;
 }
 .fonctionnement__number {
   display: flex;
@@ -247,7 +404,7 @@ button:hover {
   border-radius: 50%;
   color: white;
   font-size: 15px;
-  background-color: #9356dc;
+  background-color: #9356DC;
 }
 .fonctionnement__icone {
   display: flex;
@@ -285,6 +442,23 @@ button:hover {
   list-style-type: none;
   width: 100%;
   padding-left: 0;
+}
+@media screen and (min-width: 768px) {
+  .restaurants_orga ul {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+  }
+}
+@media screen and (min-width: 768px) {
+  .restaurants_orga li {
+    width: 45%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .restaurants_orga li {
+    width: 34%;
+  }
 }
 .restaurants_orga a {
   color: black;
@@ -332,43 +506,14 @@ button:hover {
   color: black;
 }
 
-/* Mise en place de l'animation du bouton "j'aime" en forme de coeur */
-@keyframes heart {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.heart {
-  width: 15%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 35px;
-}
-.heart .far {
-  position: absolute;
-  font-weight: 100;
-}
-.heart .far:hover {
-  opacity: 0;
-}
-.heart .fas {
-  position: absolute;
-  color: transparent;
-  background-clip: text;
-  -webkit-background-clip: text;
-  opacity: 0;
-  background-image: linear-gradient(#9356DC, #FF79DA);
-}
-.heart .fas:hover {
-  opacity: 1;
-  animation: heart 1000ms;
+/* Mise en page des menus */
+.cover-image img {
+  height: 250px;
+  width: 100%;
+  object-fit: cover;
+  z-index: 1;
 }
 
-/* Mise en page des menus */
 .menu {
   border-radius: 35px 35px 0px 0px;
   margin-top: -32px;
@@ -448,7 +593,7 @@ button:hover {
     transform: rotate(0);
   }
 }
-/* Mise en place de l'animation xde transition des cartes */
+/* Mise en place de l'animation de transition des cartes */
 @keyframes entrees {
   0% {
     transform: translateY(-100px) translateX(150px);
@@ -489,47 +634,6 @@ button:hover {
 }
 .desserts__animation {
   animation: desserts 1800ms 0ms;
-}
-
-.footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  padding: 30px 20px;
-  background-color: rgb(58, 58, 58);
-  color: white;
-}
-.footer p {
-  font-size: 18px;
-  padding-bottom: 0;
-  margin-bottom: 0;
-  padding-top: 0;
-  margin-top: 8px;
-}
-.footer a {
-  text-decoration: none;
-  color: white;
-}
-.footer__logo {
-  width: 35%;
-  filter: invert(100%);
-  margin-bottom: 12px;
-}
-.footer__logo img {
-  width: 100%;
-  height: 100%;
-}
-.footer__info {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-end;
-}
-.footer__info span {
-  width: 5%;
-}
-.footer__info p {
-  margin-left: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
