--- a/sass/layouts/_box.scss
+++ b/sass/layouts/_box.scss
@@ -6,4 +6,8 @@
     margin-bottom: 30px;
     border-radius: 15px;
     box-shadow: 5px 5px 10px $color-shadow;
+
+    @include responsive-tablet {
+        margin-right: 0;
+    }
 }
