--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -6,6 +6,10 @@
     background-color: rgb(58, 58, 58);
     color: white;
 
+    @include responsive-tablet {
+        align-items: center;
+    }
+
     & p {
         font-size: 18px;
         padding-bottom: 0;
@@ -24,6 +28,12 @@
         filter: invert(100%);
         margin-bottom: 12px;
 
+        @include responsive-tablet {
+            
+            max-width: 20%;
+            margin-bottom: 20px;
+        }
+
         img {
             width: 100%;
             height: 100%;
@@ -31,17 +41,26 @@
     }
 
     &__info {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: flex-end;
-
-        & span {
-            width: 5%;
+        @include responsive-tablet {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            width: 100%;
         }
 
-        & p {
-            margin-left: 15px;
+        &--layout             {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: flex-end;
+    
+            & span {
+                width: 5%;
+            }
+    
+            & p {
+                margin-left: 15px;
+            }
         }
     }
 }
