--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,15 @@
 @import "./utils/variables";
 @import "./utils/mixins";
 @import "./base/polices";
-@import "./base/settings";
+@import "./base/titles";
 @import "./components/button";
 @import "./components/heart";
 @import "./components/spinner";
+@import "./layouts/body";
 @import "./layouts/box";
 @import "./layouts/header";
 @import "./layouts/footer";
-@import "./pages/accueil";
+@import "./pages/home";
 @import "./pages/menu";
 
 
