--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,19 +1,22 @@
 /* Mise en page du header de la page d'accueil */
 
-.header_home {
- @include flex-center;
+.header_responsive {
+  @include flex-center;
+  flex-direction: column;
+  
+  @include responsive-tablet {
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
 
 .header__logo {
-  width: 45%;
   padding: 12px;
-  @include responsive-tablet {
-    width: 60%;
-}
+  @include flex-center;
 }
 
 .header__logo img {
-  width: 100%;
+  width: 45%;
   height: 100%;
 }
 
@@ -25,6 +28,14 @@
   justify-content: space-around;
   align-items: center;
   width: 85%;
+
+  @include responsive-tablet {
+    width: 80%;
+  }
+
+  @include responsive-desktop {
+    width: 75%;
+  }
 }
 
 .header__arrow {
