--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,7 +9,8 @@
     padding-top: 12px;
     padding-bottom: 12px;
     @include responsive-tablet {
-        padding: 0;
+        padding-top: 5px;
+        padding-bottom: 5px;
         margin-top: 12px;
         margin-bottom: 12px;
         border-radius: 35px;
